Fix double scroll bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -93,6 +93,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  overflow-y: hidden;
 }
 
 a {
